<resources>
    <string name="app_name">Expence Tracker</string>
    <string name="todo">TODO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthaly">Monthaly</string>
    <string name="yearly">Yearly</string>
    <string name="daily">Daily</string>
    <string name="enter_text">Enter text</string>
    <string name="ammount">Amount</string>
    <string name="expense_debit">Expense(Debit)</string>
    <string name="income_credit">Income(Credit)</string>
    <string name="descibe_here">Descibe here</string>
    <string name="delete">delete</string>
    <string name="detail">Detail</string>
    <string name="text">Text</string>
    <string name="amount">Amount</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_income">Total Income</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="current_date">Current Date</string>
    <string name="date">Date</string>
    <string name="total_expenses">total Expense =</string>
    <string name="total_incomes">total income =</string>
    <string name="incometotal">incomeTotal</string>
    <string name="expense_total">Expense Total</string>
    <string name="balance">Balance</string>
    <string name="month">Month</string>
    <string name="enter_task">enter task</string>
    <string name="enter_detail">Enter Detail</string>
    <string name="save_task">Save Task</string>
    <string name="add_your_todotask">Add your ToDoTask</string>
</resources>