<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_layout"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:backgroundTint="#DEDBE4"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:scrollHorizontally="true"
                android:text="@string/text"
                android:textColor="#202020"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:maxLines="10"
                android:padding="8dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>



        <TextView
            android:id="@+id/tv_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/detail"
            android:textColor="#4C4C4C"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

</androidx.cardview.widget.CardView>